// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`pageAside > renders with as correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="container" class="">
    <!--v-if-->
  </div>
</div>"
`;

exports[`pageAside > renders with bottom slot correctly 1`] = `
"<aside data-slot="root" class="">
  <div data-slot="container" class="">
    <!--v-if-->Bottom slot
  </div>
</aside>"
`;

exports[`pageAside > renders with class correctly 1`] = `
"<aside data-slot="root" class="lg:flex">
  <div data-slot="container" class="">
    <!--v-if-->
  </div>
</aside>"
`;

exports[`pageAside > renders with default slot correctly 1`] = `
"<aside data-slot="root" class="">
  <div data-slot="container" class="">
    <!--v-if-->Default slot
  </div>
</aside>"
`;

exports[`pageAside > renders with top slot correctly 1`] = `
"<aside data-slot="root" class="">
  <div data-slot="container" class="">
    <div data-slot="top" class="">
      <div data-slot="topHeader" class=""></div>
      <div data-slot="topBody" class="">Top slot</div>
      <div data-slot="topFooter" class=""></div>
    </div>
  </div>
</aside>"
`;

exports[`pageAside > renders with ui correctly 1`] = `
"<aside data-slot="root" class="">
  <div data-slot="container" class="absolute">
    <!--v-if-->
  </div>
</aside>"
`;
